@@ -22,6 +22,7 @@ v1.1.0a --> 1.1.x :
 		- added audio_artist_noid3 option to sort by releasename istf id3 info (by pp)
 		- fixed small bug in speedtest dirs when mark_file_as_bad was set to TRUE.
 		- fixed small bug in sample_list.
+		- fixed small bug with channel announce of groups.
 
 v1.1.0 --> 1.1.0a : (r2414)
 		- stats in announces were broken in v1.1.0, ``hotfix''.
